Back to development: 2.57

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.57 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.56 (2013-01-25)
 -----------------
 
