Back to development: 2.58

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.58 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.57 (2013-02-12)
 -----------------
 
