--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.59 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.58 (2013-02-18)
 -----------------
 
