Back to development: 2.60

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.60 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.59 (2013-02-26)
 -----------------
 
