Back to development: 2.61

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.61 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.60 (2013-03-04)
 -----------------
 
