Back to development: 2.62

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.62 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.61 (2013-03-25)
 -----------------
 
