--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,11 @@ Changelog of flooding-lib
 2.63 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Extend meta file for ROR exporttool.
+
+- Reduce memory usage in function to find max_array for ROR exporttool.
+
+- Extend Export run details overview.
 
 
 2.62 (2013-03-26)
