--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.64 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.63 (2013-03-26)
 -----------------
 
