--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.65 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.64 (2013-03-28)
 -----------------
 
