Back to development: 2.66

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.66 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.65 (2013-04-04)
 -----------------
 
