--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.66 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix problem with empty gridmaxwaterdepth.zip #1.
 
 
 2.65 (2013-04-04)
