Back to development: 2.67

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.67 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.66 (2013-04-08)
 -----------------
 
