Fix problem by ror-export on creating gdal driver.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.67 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix problem by ror-export for on creating mem driver.
 
 
 2.66 (2013-04-08)
