--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.68 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix encoding error in export tool.
 
 
 2.67 (2013-04-08)
