--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.69 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- More encoding fixes in export-tool.
 
 
 2.68 (2013-04-08)
