Delete gdal's dataset toe reduce memory usage.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.70 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Close gdal's datasets to reduce memory usage.
 
 
 2.69 (2013-04-08)
