--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.71 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.70 (2013-04-09)
 -----------------
 
