Back to development: 2.73

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.73 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.72 (2013-04-15)
 -----------------
 
