--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog of flooding-lib
 2.73 (unreleased)
 -----------------
 
-- Removed import unicode_literals due problem with gdal.
+- Removed import unicode_literals from presentationlayer_generation.py
+  due problem with gdal.
 
 
 2.72 (2013-04-15)
