Back to development: 2.74

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.74 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.73 (2013-04-17)
 -----------------
 
