--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.75 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.74 (2013-04-22)
 -----------------
 
