Back to development: 2.77

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.77 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.76 (2013-05-07)
 -----------------
 
