Back to development: 2.78

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.78 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.77 (2013-05-15)
 -----------------
 
