--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.79 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Close gdal dataset properly.
 
 
 2.78 (2013-05-16)
