--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.80 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.79 (2013-05-16)
 -----------------
 
