--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.81 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.80 (2013-05-17)
 -----------------
 
