Back to development: 2.82

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.82 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.81 (2013-06-17)
 -----------------
 
