Back to development: 2.83

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.83 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.82 (2013-06-20)
 -----------------
 
