--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.84 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.83 (2013-07-02)
 -----------------
 
