--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog of flooding-lib
 2.85 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Cache the province a Scenario belongs to. Cache a province's
+  scenario statistics.
 
 
 2.84 (2013-07-03)
@@ -47,7 +48,7 @@ Changelog of flooding-lib
 2.78 (2013-05-16)
 -----------------
 
-- Completed implementation of 'edit' functionality for export tool. 
+- Completed implementation of 'edit' functionality for export tool.
 
 
 2.77 (2013-05-15)
