Back to development: 2.86

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.86 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.85 (2013-07-08)
 -----------------
 
