--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.87 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.86 (2013-07-10)
 -----------------
 
