Back to development: 2.88

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.88 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.87 (2013-07-15)
 -----------------
 
