Back to development: 2.89

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.89 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.88 (2013-07-15)
 -----------------
 
