--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.88 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Copy STRUCT3B file in place of STRUCT to sobek model.
 
 
 2.87 (2013-07-12)
