--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.90 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.89 (2013-07-18)
 -----------------
 
