--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.91 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.90 (2013-08-14)
 -----------------
 
