--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.92 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.91 (2013-08-15)
 -----------------
 
