--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.93 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.92 (2013-09-09)
 -----------------
 
