Back to development: 2.94

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.94 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.93 (2013-09-13)
 -----------------
 
