--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.95 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.94 (2013-09-13)
 -----------------
 
