Let the calculate_export_maps.py script calculate the new maps.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Changelog of flooding-lib
 -----------------
 
 - Add two maps (period of increasing water level, wavefonts) to export runs.
+  Let the calculate_export_maps.py script calculate them.
 
 
 2.94 (2013-09-13)
