Back to development: 2.96

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.96 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.95 (2013-09-24)
 -----------------
 
