--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.96 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Add download/upload functionality for ror-keringen, -wateren.
 
 
 2.95 (2013-09-24)
