Back to development: 2.97

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.97 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.96 (2013-10-09)
 -----------------
 
