Back to development: 2.98

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.98 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.97 (2013-10-11)
 -----------------
 
