Back to development: 2.99

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.99 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 2.98 (2013-10-15)
 -----------------
 
