--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 2.99 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix error on decode ascii.
 
 
 2.98 (2013-10-15)
