--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+2.100 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.99 (2013-10-21)
 -----------------
 
