Back to development: 3.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.2 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 3.01 (2013-10-21)
 -----------------
 
