Back to development: 3.03

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.03 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.02 (2013-10-23)
 -----------------
 
