Back to development: 3.4

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.4 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 3.03 (2013-11-18)
 -----------------
 
