--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.05 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.04 (2013-11-20)
 -----------------
 
