--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.6 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 3.05 (2013-11-27)
 -----------------
 
