--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 3.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fix search regions by externalwaters.
 
 
 3.05 (2013-11-27)
