Back to development: 3.07

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.07 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.06 (2013-11-28)
 -----------------
 
