Back to development: 3.8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.8 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 3.7 (2013-12-03)
 ----------------
 
