--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.9 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 3.8 (2014-01-29)
 ----------------
 
