--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.10 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.9 (2014-01-29)
 ----------------
 
