Back to development: 3.11

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.11 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.10 (2014-02-03)
 -----------------
 
