--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.13 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.12 (2014-02-10)
 -----------------
 
