--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.15 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.14 (2014-02-20)
 -----------------
 
