--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 3.15 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Add google projection for animation.
 
 
 3.14 (2014-02-20)
