--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.16 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.15 (2014-04-04)
 -----------------
 
