--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog of flooding-lib
 3.16 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Flush data after rasterizing grid for openbreach task.
 
 
 3.15 (2014-04-04)
