--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,12 @@ Changelog of flooding-lib
   in the 'colormaps' subdirectory of the Flooding share, besides
   the matplotlib colormaps for Pyramid legends.
 
+- Presentationtypes have a default colormap. It is now also possible
+  to configure a different default colormap for a specific project,
+  per presentationtype, using ProjectColormap in the admin
+  interface. If a scenario has multiple project, only its main project
+  is used to look up default colormaps.
+
 
 3.15 (2014-04-04)
 -----------------
