Back to development: 3.17

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.17 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.16 (2014-04-11)
 -----------------
 
