--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.18 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.17.2 (2014-04-11)
 -------------------
 
