--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog of flooding-lib
 ===================================================
 
+3.17.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.17.3 (2014-04-11)
 -------------------
 
