--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Changelog of flooding-lib
 -----------------
 
 - Flush data after rasterizing grid for openbreach task.
+- Fix 'Laad Maatregelen' form.
 
 
 3.15 (2014-04-04)
