Back to development: 3.18

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.18 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.17.4 (2014-04-14)
 -------------------
 
