--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.19 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.18 (2014-05-13)
 -----------------
 
