--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.20 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.19 (2014-05-28)
 -----------------
 
