--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 3.19 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Repaire compute_sobek_model task by using the measures.
 
 
 3.18 (2014-05-13)
