--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 3.21 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix breach overview.
 
 
 3.20 (2014-07-03)
