--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.22 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.21 (2014-07-30)
 -----------------
 
