--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.23 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.22 (2014-08-15)
 -----------------
 
