--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 3.23 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix: now providing flooding_base package.
 
 
 3.22 (2014-08-15)
