Back to development: 3.22.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.22.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.22.1 (2014-08-21)
 -------------------
 
