--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,10 @@ Changelog of flooding-lib
 3.22.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Added filtering on 'approved y/n' for scenarios on the export page. Note:
+  due to the boolean nature of booleans, the filtering in the user interface
+  only really works to show only *approved* scenarios. (If you want the
+  non-approved scenarios, you could sort on the column.)
 
 
 3.22.1 (2014-08-21)
