Max 300 scenarios per export

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,7 @@ Changelog of flooding-lib
   - See only your own exports, or ones that have been marked "public"
   - Move your own exports to an archive page
   - Delete your own exports from the archive page
+  - Max 300 scenarios per export
 
 
 3.23 (2014-08-28)
