Back to development: 3.26

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.26 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.25.1 (2014-09-02)
 -------------------
 
