Back to development: 3.28

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.28 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.27 (2014-10-03)
 -----------------
 
