--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.29 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.28 (2014-11-17)
 -----------------
 
