--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 3.29 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Encode unicode on write to csv.
 
 
 3.28 (2014-11-17)
