Back to development: 3.30

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.30 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.29 (2014-12-03)
 -----------------
 
