Back to development: 3.31

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.31 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.30 (2015-03-06)
 -----------------
 
