--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 3.31 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Change permission for info button.
 
 
 3.30 (2015-03-06)
