--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+3.32 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 3.31 (2015-03-09)
 -----------------
 
