Add descriotion to CHANGES.txt.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Changelog of flooding-lib
 3.32 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Add PointSymbolizer to show start end end point of embankments.
+- Disable Hoogkaart and Bestande keringen layers by default.
 
 
 3.31 (2015-03-09)
