--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 3.33 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Update code to mapnik-2.2
 
 
 3.32 (2016-03-08)
