--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+4.2 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 4.1 (2016-04-26)
 ----------------
 
