--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 4.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Set map projection to 3857
 
 
 4.1 (2016-04-26)
