Back to development: 4.4

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+4.4 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 4.3 (2016-07-06)
 ----------------
 
