--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 4.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add log bij retrieving input-fields for infowindow.
 
 
 4.3 (2016-07-06)
