--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+4.8 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 4.7 (2016-09-21)
 ----------------
 
