--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+4.9 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 4.8 (2017-06-27)
 ----------------
 
