Back to development: 4.10

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+4.10 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 4.9 (2017-07-11)
 ----------------
 
