--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+4.11 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 4.10 (2017-08-18)
 -----------------
 
