--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 4.11 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Added administrator to breach model and export screen.
 
 
 4.10 (2017-08-18)
