--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+5.0.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 5.0.1 (2019-03-26)
 ------------------
 
