--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,10 @@ Changelog of flooding-lib
 5.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed bug with calling stormlevel for the external water graph.
+
+- Downgraded Matplotlib because the code still assumes a (really) old
+  version.
 
 
 5.0.2 (2019-04-01)
